<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/toast_plomb"
    android:background="@color/White"
    android:layout_marginLeft="5sp">

    <TextView
        style="@style/TitrePresta"
        android:text="@string/plom"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/plomb1"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/plomb"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/plombe"
        android:textStyle="bold"/>

    </LinearLayout>

