<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/toast_termite"
    android:background="@color/White"
    android:layout_marginLeft="5sp">

    <TextView
        style="@style/TitrePresta"
        android:text="@string/termit"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/termites1"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/termite"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/termites"
        android:textStyle="bold"/>

</LinearLayout>

