<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/White">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lesBoutons">


    <LinearLayout
        android:layout_marginLeft="5sp"
        android:layout_above="@id/lesBoutons"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/diag12"/>

        <TextView

        android:text="@string/q1"
        style="@style/QuestionTitle"/>
    
    <TextView
        android:text="@string/r1"
        style="@style/Reponse" />
    <TextView
        android:text="@string/q2"
        style="@style/QuestionTitle" />

    <TextView
        android:text="@string/r2"
        style="@style/Reponse" />
    <TextView
        android:text="@string/q3"
        style="@style/QuestionTitle" />
    <TextView
        android:text="@string/r3"
        style="@style/Reponse" />
    <TextView
        android:text="@string/q4"
        style="@style/QuestionTitle" />
    <TextView
        android:text="@string/r4"
        style="@style/Reponse" />

</LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/lesBoutons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.01"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:padding="1sp"
        android:weightSum="1">



        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:id="@+id/accueil"
                android:background="@color/transparent"
                />

            <ImageView
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:scaleType="fitXY"
                android:src="@drawable/accueil"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/loupe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Red">
            <Button
                android:id="@+id/Button1"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:background="@color/transparent"
                />
            <ImageView
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:scaleType="fitXY"
                android:src="@drawable/loupe"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/photo"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:background="@color/transparent"
                />
            <ImageView
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:scaleType="fitXY"
                android:src="@drawable/photo"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/prestation"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:background="@color/transparent"
                />
            <ImageView
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:scaleType="fitXY"
                android:src="@drawable/services"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/contact"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:background="@color/transparent"
                />
            <ImageView
                android:layout_width="65sp"
                android:layout_height="65sp"
                android:scaleType="fitXY"
                android:src="@drawable/mail"
                android:layout_gravity="center"/>
        </FrameLayout>



    </LinearLayout>

</RelativeLayout>